fix: fix submit button visibility on lose input focus

--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -126,6 +126,12 @@
     &:hover {
       cursor: pointer;
     }
+
+    &_active {
+      visibility: visible;
+      opacity: 1;
+      transition: visibility 0s, opacity .6s;
+    }
   }
 
   &__copyright {
